[gd_scene load_steps=6 format=3 uid="uid://dxqbjiwfybhtg"]

[ext_resource type="PackedScene" uid="uid://ch786by0nl2gy" path="res://source/class/character_class.tscn" id="1_yafv6"]
[ext_resource type="Script" path="res://source/entity/npc/npc_attacker_enemy.gd" id="2_q7avs"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lwc1m"]
albedo_color = Color(0.243137, 0.576471, 0.588235, 1)
metallic = 1.0
roughness = 0.5
clearcoat_enabled = true
clearcoat_roughness = 0.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_550n4"]
material = SubResource("StandardMaterial3D_lwc1m")
radius = 0.3
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_eox43"]
radius = 0.3
height = 1.8

[node name="npc_attacker_enemy" groups=["enemies"] instance=ExtResource("1_yafv6")]
script = ExtResource("2_q7avs")

[node name="MeshInstance3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
mesh = SubResource("CapsuleMesh_550n4")

[node name="CollisionShape3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_eox43")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="2"]
path_height_offset = 1.0
avoidance_enabled = true

[node name="attackCooldownTimer" type="Timer" parent="." index="3"]
one_shot = true

[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
